Fix: Add wrap to subtext class

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ a{
 .subtext{
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .information{
